# discussion-bots

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
discussion_bots/: bot.py  chat.py  config.py  history.py  promt.py
tests/: test_chat.py
